styles.css
body {
    position: relative; 
   /*
    width: 100%; 
    display: flex; 
    align-items: center;
    justify-content: center; 
    height:100vh;*/
    &::before {
        content: "";
       
      /*  background-size: cover; */
        position: absolute;
        top: 0px;
        right: 0px;
        bottom: 0px;
        left: 0px;
        background-image: url("./flag.jpg");
        background-size: cover; 
        background-position: top center; 
        opacity: 0.25;
    }
}



.banner {
    align-items: center;
    isolation: isolate;
    text-align: center;
}
.vote {
    font-size: 250%;
    display: inline;
    isolation: isolate;
}

.gold {
    color: #a17f1a;
    font-weight: bold;
    text-align: center;
    text-shadow: 1px 1px 1px #a17f1a;
    font-size: 500%;
    padding-bottom: 0px;
    margin-bottom: 0px;
    isolation: isolate;
}

.blue {
    text-transform: uppercase;
    margin-top: 0px;
    padding-top: 0px;
    color: #56A0D3;
    font-weight: bold;
    text-align: center;
    font-size: 250%;
    padding-bottom: 0px;
    margin-bottom: 0px;
    isolation: isolate;
}

.blue2 {
    margin-top: 0px;
    padding-top: 0px;
    color: #56A0D3;
    font-weight: bold;
    text-align: center;
    font-size: 250%;
    padding-top: 0px;
    margin-top: 0px;
    isolation: isolate;
}

.for {
    margin-top: 0px;
    padding-top: 0px;
    text-align: center;
    color: #56A0D3;
    font-size: 200%;
    padding-bottom: 0px;
    margin-bottom: 0px;
    isolation: isolate;
}

.bwpic {
    align-items: right;
    align-content: right;
    /* display: block; */
    margin-left: auto;
    display: inline;
    right: 0;
    isolation: isolate;
}

p {
    font-size: 160%;
    isolation: isolate;
}

.boldupper {
    font-weight: bold;
    font-size: 130%;
    text-transform: uppercase;
}

.effective {
    margin-bottom: 0px;
    margin-bottom: 0px;
    isolation: isolate;
    font-size: 160%;
}

.meet {
    isolation: isolate;
    margin-top: 0px;
    padding-top: 0px;
    font-size: 160%;
}

.kvk2 {
     isolation: isolate; 
    /* align-content: center;  */

    display: block;
  margin: auto;
  width: 50%;
  
}

p i {
    font-size: 160%;
    isolation: isolate;
    margin-bottom: 0px;
    padding-bottom: 0px;

}

ol {
    margin-top: 0px;
    padding-top: 0px;
    isolation: isolate;
    font-size: 160%;
}

li {
    margin-top: 0px;
    padding-top: 0px;
    isolation: isolate;
    font-size: 160%;
    font-size: 160%;
    isolation: isolate;

}

.talkingpoints {
    text-transform: uppercase;
}

.point {
    color: #56A0D3;
    font-style: italic;
    text-transform: none;
}

.red {
    color: red;
    font-weight: bold;
}

